@@ -76,8 +76,8 @@ val _ =
 val _ =
   ProofGeneral.preference ProofGeneral.category_advanced_display
     NONE
-    (Markup.print_int o get_print_depth)
-    (print_depth o Markup.parse_int)
+    (Markup.print_int o get_default_print_depth)
+    (put_default_print_depth o Markup.parse_int)
     ProofGeneral.pgipint
     "print-depth"
     "Setting for the ML print depth";
